style.css
html,
body {
	margin: 0;
	font-family: Arial, Helvetica, sans-serif;
}

nav {
	position: absolute;
	bottom: 64px;
	left: 64px;
	font-size: 24px;
	background-color: rgba(255, 255, 255, 0.5);
	border-radius: 1em;
	padding-left: 0.5em;
}

nav span {
	display: inline-block;
	min-width: 1em;
	height: 1em;
	margin: 0 0.1em;
	border-radius: 1em;
	background: white;
	text-align: center;
	line-height: 1em;
	padding: 0.3em;
}

nav span:last-of-type {
	margin-right: 0;
}

.stats {
	margin: 64px;
}

.controls--mobile {
	display: none;
}

@media screen and (max-width: 768px) {
	nav {
		display: none;
	}

	.stats {
		margin: 0;
	}

	.controls--mobile {
		position: absolute;
		/* z-index: 100; */
		top: 0;
		left: 0;
		width: 100%;
		height: 100vh;
		display: flex;
		flex-direction: column;
		justify-content: flex-end;
		align-items: center;
	}

	.controls--mobile button {
		font-family: monospace;
		font-size: 48px;
		width: 96px;
		height: 96px;
		line-height: 1.6;
		margin: 0;
		border-radius: 50%;
		display: block;
		text-align: center;
		border: none;
		background-color: rgba(255, 255, 255, 0.25);
	}

	.controls--mobile button + button {
		margin-bottom: 96px;
		margin-top: 24px;
	}

	.controls--mobile button:active {
		background-color: rgba(255, 255, 255, 0.5);
	}
}

